--- a/src/views/webpPage/css/business-card.scss
+++ b/src/views/webpPage/css/business-card.scss
@@ -12,6 +12,11 @@
     width: 600px;
     height: 300px;
     box-shadow: inset 15px 15px 30px -15px rgba(255, 255, 255, 0.05), 3px 3px 3px  rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content:space-between;
+  }
+  .info {
+    color: #ffffffee;
   }
 }
 //#f8b567  //#2ed2d4  //#26bd9e
