新建>>> 麒麟杯

--- a/src/views/_02_design/css/hello2021.scss
+++ b/src/views/_02_design/css/hello2021.scss
@@ -1,6 +1,5 @@
 #hello2021 {
-  width: 1200px;
-  height: 800px;
+  height: 100vh;
   background: -webkit-radial-gradient(10% 110%, farthest-side, #ffc2cd, #db6084);
   display: flex;
   align-items: center;
